Remove horizontal scrollbar issues.

--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -9,6 +9,7 @@ button,
   outline: none;
   border: none;
   font-size: 1em;
+  display: inline-block;
   cursor: pointer;
 
   &.affirmative {
