--- a/app/assets/stylesheets/modules/_layout.scss
+++ b/app/assets/stylesheets/modules/_layout.scss
@@ -10,7 +10,7 @@
 
 .grid-event {
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 1.85vw;
   grid-template-columns: 5fr 2fr;
   align-items: start;
   grid-template-areas:
@@ -18,12 +18,7 @@
     "control-bar control-bar"
     "main aside";
 
-  @media(max-width: 850px) {
-    grid-gap: 15px;
-  }
-
   @media(max-width: 650px) {
-    grid-gap: 10px;
     grid-template-areas:
       "management management"
       "control-bar control-bar"
@@ -34,7 +29,7 @@
 
 .grid-event-list {
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 1.85vw;
   grid-template-columns: repeat(3, 1fr);
 }
 
@@ -48,12 +43,24 @@ header {
   align-items: baseline;
   padding: 0 $device-padding;
   box-sizing: border-box;
+  transition: padding 0.2s ease-in;
 
   > a {
     font-size: $logo-size;
     font-weight: $bold;
     color: #000;
     text-decoration: none;
+    transition: all 0.2s ease-in-out;
+  }
+
+  @media(max-width: 1000px) {
+    padding: 0 $device-padding/2;
+  }
+
+  @media(max-width: 650px) {
+    > a {
+      font-size: $logo-size*0.75;
+    }
   }
 }
 
@@ -68,12 +75,16 @@ footer {
   margin-bottom: 30px;
   padding: $device-padding $device-padding 0;
   box-sizing: border-box;
+  transition: padding 0.2s ease-in;
+
+  @media(max-width: 1000px) {
+    padding: $device-padding/2 $device-padding/2 0;
+  }
 }
 
 .container {
   max-width: 1100px;
   margin: 0 auto;
-  padding: $device-padding $device-padding 0;
 
   > .main {
     grid-area: main;
@@ -98,4 +109,9 @@ footer {
     margin-top: 0;
     font-size: 3.25em;
   }
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-end;
 }
